adicionando realtime com websockets nos microsserviços de Orders e Mapping (mudança de status no frontend quando o pedido é entregue)

--- a/order_microservice/views/order/index.hbs
+++ b/order_microservice/views/order/index.hbs
@@ -1,5 +1,6 @@
-<script type="text/babel">
-    function Page() {
+<div>
+    <script type="text/babel">
+
         function labelStatus(status) {
             switch (status) {
                 case 1:
@@ -8,50 +9,70 @@
                     return 'Entregue';
             }
         }
-
-        return (
-            <MUI.Container>
-                <MUI.Typography variant={"h4"}>Listagem de pedidos</MUI.Typography>
-                <MUI.Box dir={'rtl'} paddingBottom={2}>
-                    <MUI.Button
-                        title="Adicionar novo pedido"
-                        color="primary"
-                        variant="contained"
-                        href="/orders/create"
-                    >
-                        Novo pedido
-                    </MUI.Button>
-                </MUI.Box>
-                <MUI.Table>
-                    <MUI.TableHead>
-                        <MUI.TableRow>
-                            <MUI.TableCell>ID</MUI.TableCell>
-                            <MUI.TableCell>Motorista</MUI.TableCell>
-                            <MUI.TableCell>Destino</MUI.TableCell>
-                            <MUI.TableCell>Entregue?</MUI.TableCell>
-                            <MUI.TableCell>Ações</MUI.TableCell>
-                        </MUI.TableRow>
-                    </MUI.TableHead>
-                    <MUI.TableBody>
-                        {{#forEach data}}
+        
+        function Page() {
+            return (
+                <MUI.Container>
+                    <MUI.Typography variant={"h4"}>Listagem de pedidos</MUI.Typography>
+                    <MUI.Box dir={'rtl'} paddingBottom={2}>
+                        <MUI.Button
+                            title="Adicionar novo pedido"
+                            color="primary"
+                            variant="contained"
+                            href="/orders/create"
+                        >
+                            Novo pedido
+                        </MUI.Button>
+                    </MUI.Box>
+                    <MUI.Table>
+                        <MUI.TableHead>
                             <MUI.TableRow>
-                                <MUI.TableCell>{{id}}</MUI.TableCell>
-                                <MUI.TableCell>{{driver_name}}</MUI.TableCell>
-                                <MUI.TableCell>Destino {{location_id}}</MUI.TableCell>
-                                <MUI.TableCell>{labelStatus({{status}})}</MUI.TableCell>
-                                <MUI.TableCell>
-                                    <a
-                                        href="{{MICRO_MAPPING_URL}}/orders/{{id}}/mapping"
-                                        target="_blank"
-                                    >
-                                        Ver mapa
-                                    </a>
-                                </MUI.TableCell>
+                                <MUI.TableCell>ID</MUI.TableCell>
+                                <MUI.TableCell>Motorista</MUI.TableCell>
+                                <MUI.TableCell>Destino</MUI.TableCell>
+                                <MUI.TableCell>Entregue?</MUI.TableCell>
+                                <MUI.TableCell>Ações</MUI.TableCell>
                             </MUI.TableRow>
-                        {{/forEach}}
-                    </MUI.TableBody>
-                </MUI.Table>
-            </MUI.Container>
-        );
-    }
-</script>
+                        </MUI.TableHead>
+                        <MUI.TableBody>
+                            {{#forEach data}}
+                                <MUI.TableRow id="{{id}}">
+                                    <MUI.TableCell>{{id}}</MUI.TableCell>
+                                    <MUI.TableCell>{{driver_name}}</MUI.TableCell>
+                                    <MUI.TableCell>Destino {{location_id}}</MUI.TableCell>
+                                    <MUI.TableCell>{labelStatus({{status}})}</MUI.TableCell>
+                                    <MUI.TableCell>
+                                        <a
+                                            href="{{MICRO_MAPPING_URL}}/orders/{{id}}/mapping"
+                                            target="_blank"
+                                        >
+                                            Ver mapa
+                                        </a>
+                                    </MUI.TableCell>
+                                </MUI.TableRow>
+                            {{/forEach}}
+                        </MUI.TableBody>
+                    </MUI.Table>
+                </MUI.Container>
+            );
+        }
+    </script>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" crossorigin="anonymous"></script>
+    <script>
+
+        const socket = io('http://192.168.99.100:3000/');
+
+        socket.on('connect', () => {
+            console.log(`started socket connection with id ${socket.id}`);
+        });
+        socket.on('disconnect', () => {
+            console.log('socket lost connection to the server...');
+        });
+
+        socket.on('order.change-status', (data) => {
+            console.log(data);
+            $(`tr#${data.id} td:nth-child(4)`).text(labelStatus(data.status));
+        });
+    </script>
+</div>
